@@ -26,18 +26,17 @@ import java.lang.annotation.Annotation;
 import java.lang.reflect.Type;
 import java.nio.charset.StandardCharsets;
 
-import javax.ws.rs.Consumes;
-import javax.ws.rs.Encoded;
-import javax.ws.rs.Produces;
-import javax.ws.rs.WebApplicationException;
-import javax.ws.rs.core.Context;
-import javax.ws.rs.core.Form;
-import javax.ws.rs.core.MediaType;
-import javax.ws.rs.core.MultivaluedMap;
-import javax.ws.rs.ext.MessageBodyReader;
-import javax.ws.rs.ext.MessageBodyWriter;
-import javax.ws.rs.ext.Provider;
-
+import jakarta.ws.rs.Consumes;
+import jakarta.ws.rs.Encoded;
+import jakarta.ws.rs.Produces;
+import jakarta.ws.rs.WebApplicationException;
+import jakarta.ws.rs.core.Context;
+import jakarta.ws.rs.core.Form;
+import jakarta.ws.rs.core.MediaType;
+import jakarta.ws.rs.core.MultivaluedMap;
+import jakarta.ws.rs.ext.MessageBodyReader;
+import jakarta.ws.rs.ext.MessageBodyWriter;
+import jakarta.ws.rs.ext.Provider;
 import org.apache.cxf.jaxrs.ext.MessageContext;
 import org.apache.cxf.jaxrs.ext.multipart.Attachment;
 import org.apache.cxf.jaxrs.ext.multipart.MultipartBody;
@@ -145,7 +144,7 @@ public class FormEncodingProvider<T> extends AbstractConfigurableProvider
         if (clazz == MultivaluedMap.class || clazz == Form.class) {
             return new MetadataMap<String, String>();
         }
-        return (MultivaluedMap<String, String>)clazz.newInstance();
+        return (MultivaluedMap<String, String>)clazz.getDeclaredConstructor().newInstance();
     }
 
     private T getFormObject(Class<T> clazz, MultivaluedMap<String, String> params) {
@@ -181,7 +180,7 @@ public class FormEncodingProvider<T> extends AbstractConfigurableProvider
                                                 FormUtils.readBody(is, enc),
                                                 enc,
                                                 decode,
-                                                (javax.servlet.http.HttpServletRequest)servletRequest);
+                                                (jakarta.servlet.http.HttpServletRequest)servletRequest);
             }
         }
     }
@@ -205,7 +204,7 @@ public class FormEncodingProvider<T> extends AbstractConfigurableProvider
 
     private static boolean isSupported(Class<?> type, MediaType mt) {
         return (MultivaluedMap.class.isAssignableFrom(type) || Form.class.isAssignableFrom(type))
-            || (mt.getType().equalsIgnoreCase("multipart")
+            || ("multipart".equalsIgnoreCase(mt.getType())
             && mt.isCompatible(MediaType.MULTIPART_FORM_DATA_TYPE)
             && (MultivaluedMap.class.isAssignableFrom(type) || Form.class.isAssignableFrom(type)));
     }
