@@ -18,10 +18,10 @@
  */
 package org.apache.cxf.jaxrs.client.spec;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.concurrent.atomic.AtomicInteger;
 
-import javax.ws.rs.client.Client;
-
+import jakarta.ws.rs.client.Client;
 import org.apache.cxf.jaxrs.impl.ConfigurableImpl;
 import org.apache.cxf.jaxrs.provider.PrimitiveTextProvider;
 
@@ -40,8 +40,9 @@ public class ClientBuilderImplTest {
             public <T> Object create(final Class<T> cls) {
                 try {
                     create.incrementAndGet();
-                    return cls.newInstance();
-                } catch (final InstantiationException | IllegalAccessException e) {
+                    return cls.getDeclaredConstructor().newInstance();
+                } catch (final InstantiationException | IllegalAccessException | IllegalArgumentException 
+                    | InvocationTargetException | NoSuchMethodException | SecurityException e) {
                     fail(e.getMessage());
                 }
                 return null;
