@@ -24,15 +24,14 @@ import java.io.OutputStream;
 import java.lang.annotation.Annotation;
 import java.lang.reflect.Type;
 
-import javax.ws.rs.Consumes;
-import javax.ws.rs.Produces;
-import javax.ws.rs.WebApplicationException;
-import javax.ws.rs.core.MediaType;
-import javax.ws.rs.core.MultivaluedMap;
-import javax.ws.rs.ext.MessageBodyReader;
-import javax.ws.rs.ext.MessageBodyWriter;
-import javax.ws.rs.ext.Provider;
-
+import jakarta.ws.rs.Consumes;
+import jakarta.ws.rs.Produces;
+import jakarta.ws.rs.WebApplicationException;
+import jakarta.ws.rs.core.MediaType;
+import jakarta.ws.rs.core.MultivaluedMap;
+import jakarta.ws.rs.ext.MessageBodyReader;
+import jakarta.ws.rs.ext.MessageBodyWriter;
+import jakarta.ws.rs.ext.Provider;
 import org.apache.cxf.helpers.IOUtils;
 import org.apache.cxf.jaxrs.json.basic.JsonMapObject;
 import org.apache.cxf.jaxrs.json.basic.JsonMapObjectReaderWriter;
@@ -70,7 +69,9 @@ public class JsonMapObjectProvider implements MessageBodyReader<JsonMapObject>, 
         WebApplicationException {
         String s = IOUtils.readStringFromStream(is);
         try {
-            JsonMapObject obj = cls == JsonMapObject.class ? new JsonMapObject() : cls.newInstance();
+            JsonMapObject obj = cls == JsonMapObject.class 
+                ? new JsonMapObject() 
+                    : cls.getDeclaredConstructor().newInstance();
             handler.fromJson(obj, s);
             return obj;
         } catch (Exception ex) {
