@@ -18,6 +18,7 @@
  */
 package org.apache.cxf.jaxrs.ext.search.odata;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -122,8 +123,8 @@ public class ODataParser<T> extends AbstractSearchConditionParser<T> {
 
             // Property could be either on left side (Name eq 'Tom') or
             // right side ('Tom' eq Name)
-            TypedValue value = null;
-            TypedProperty property = null;
+            final TypedValue value;
+            final TypedProperty property;
 
             if (leftSide instanceof TypedProperty && rightSide instanceof TypedValue) {
                 property = (TypedProperty)leftSide;
@@ -161,7 +162,7 @@ public class ODataParser<T> extends AbstractSearchConditionParser<T> {
                 throw new SearchParseException("Unsupported binary operation: " + operator);
             }
 
-            Object typedValue = null;
+            final Object typedValue;
             // If property type and value type are compatible, just use them
             if (property.typeInfo.getWrappedTypeClass().isAssignableFrom(value.typeClass)) {
                 typedValue = value.value;
@@ -280,12 +281,13 @@ public class ODataParser<T> extends AbstractSearchConditionParser<T> {
     @SuppressWarnings("unchecked")
     public SearchCondition<T> parse(String searchExpression) throws SearchParseException {
         try {
-            final T condition = conditionClass.newInstance();
+            final T condition = conditionClass.getDeclaredConstructor().newInstance();
             final FilterExpression expression = parser.parseFilterString(searchExpression);
             final FilterExpressionVisitor visitor = new FilterExpressionVisitor(condition);
             return (SearchCondition< T >)expression.accept(visitor);
         } catch (ODataMessageException | ODataApplicationException
-            | InstantiationException | IllegalAccessException ex) {
+            | InstantiationException | IllegalAccessException | IllegalArgumentException 
+            | InvocationTargetException | NoSuchMethodException | SecurityException ex) {
             throw new SearchParseException(ex);
         }
     }
