@@ -34,7 +34,7 @@ public class AbstractJwaTest {
     public static void installBouncyCastleProvider() throws Exception {
         final String bcClassName = "org.bouncycastle.jce.provider.BouncyCastleProvider";
         if (Security.getProvider(bcClassName) == null) {
-            Security.addProvider((Provider) Class.forName(bcClassName).newInstance());
+            Security.addProvider((Provider) Class.forName(bcClassName).getDeclaredConstructor().newInstance());
         }
     }
 
