@@ -47,16 +47,16 @@ import java.util.logging.Level;
 import java.util.logging.Logger;
 
 import javax.wsdl.Operation;
-import javax.xml.bind.annotation.XmlAttachmentRef;
-import javax.xml.bind.annotation.XmlElementWrapper;
-import javax.xml.bind.annotation.XmlList;
-import javax.xml.bind.annotation.XmlMimeType;
-import javax.xml.bind.annotation.adapters.XmlJavaTypeAdapter;
 import javax.xml.namespace.QName;
 
 import org.w3c.dom.DOMError;
 import org.w3c.dom.DOMErrorHandler;
 
+import jakarta.xml.bind.annotation.XmlAttachmentRef;
+import jakarta.xml.bind.annotation.XmlElementWrapper;
+import jakarta.xml.bind.annotation.XmlList;
+import jakarta.xml.bind.annotation.XmlMimeType;
+import jakarta.xml.bind.annotation.adapters.XmlJavaTypeAdapter;
 import org.apache.cxf.BusException;
 import org.apache.cxf.annotations.EvaluateAllEndpoints;
 import org.apache.cxf.binding.BindingFactoryManager;
@@ -145,8 +145,8 @@ public class ReflectionServiceFactoryBean extends org.apache.cxf.service.factory
     public static final String METHOD_ANNOTATIONS = "method.return.annotations";
     public static final String PARAM_ANNOTATION = "parameter.annotations";
     private static final Logger LOG = LogUtils.getL7dLogger(ReflectionServiceFactoryBean.class);
-    private static final boolean DO_VALIDATE = SystemPropertyAction.getProperty("cxf.validateServiceSchemas", "false")
-            .equals("true");
+    private static final boolean DO_VALIDATE = "true".equals(
+        SystemPropertyAction.getProperty("cxf.validateServiceSchemas", "false"));
 
     private static Class<? extends DataBinding> defaultDatabindingClass;
 
@@ -168,7 +168,7 @@ public class ReflectionServiceFactoryBean extends org.apache.cxf.service.factory
             "java.lang.Throwable",
             "org.omg.CORBA_2_3.portable.ObjectImpl",
             "org.omg.CORBA.portable.ObjectImpl",
-            "javax.ejb.EJBObject",
+            "jakarta.ejb.EJBObject",
             "javax.rmi.CORBA.Stub"
         ));
     private List<Method> ignoredMethods = new ArrayList<>();
@@ -230,7 +230,7 @@ public class ReflectionServiceFactoryBean extends org.apache.cxf.service.factory
             } catch (NoSuchMethodException nsme) {
                 //ignore, use the no-arg constructor
             }
-            return cls.newInstance();
+            return cls.getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             throw new ServiceConstructionException(e);
         }
@@ -819,7 +819,7 @@ public class ReflectionServiceFactoryBean extends org.apache.cxf.service.factory
 
         MessagePartInfo part = null;
         if (isIn && !isOut) {
-            QName name = getInPartName(o, method, i);
+            final QName name = getInPartName(o, method, i);
             part = o.getInput().getMessagePart(name);
             if (part == null && isFromWsdl()) {
                 part = o.getInput().getMessagePartByIndex(i);
@@ -832,7 +832,6 @@ public class ReflectionServiceFactoryBean extends org.apache.cxf.service.factory
                     part = o.getInput().getMessagePart(name2);
                     if (part != null) {
                         add = false;
-                        name = name2;
                     }
                 }
                 if (part != null) {
@@ -949,7 +948,7 @@ public class ReflectionServiceFactoryBean extends org.apache.cxf.service.factory
                     LOG.log(Level.WARNING, message.toString());
                 }
                 for (MessagePartInfo mpi : mpis) {
-                    String ns = null;
+                    final String ns;
                     if (mpi.isElement()) {
                         ns = mpi.getElementQName().getNamespaceURI();
                     } else {
@@ -1197,7 +1196,6 @@ public class ReflectionServiceFactoryBean extends org.apache.cxf.service.factory
         int paraNumber = 0;
         for (MessagePartInfo mpi : messageParts) {
             SchemaInfo schemaInfo = null;
-            XmlSchema schema = null;
 
             QName qname = (QName)mpi.getProperty(ELEMENT_NAME);
             if (messageParts.size() == 1 && qname == null) {
@@ -1225,6 +1223,7 @@ public class ReflectionServiceFactoryBean extends org.apache.cxf.service.factory
                 }
             }
 
+            final XmlSchema schema;
             if (schemaInfo == null) {
                 schemaInfo = getOrCreateSchema(serviceInfo, qname.getNamespaceURI(), true);
                 schema = schemaInfo.getSchema();
@@ -2421,8 +2420,8 @@ public class ReflectionServiceFactoryBean extends org.apache.cxf.service.factory
         if (anns != null) {
             for (Annotation ann : anns) {
                 String pkg = ann.annotationType().getPackage().getName();
-                if ("javax.xml.ws".equals(pkg)
-                    || "javax.jws".equals(pkg)) {
+                if ("jakarta.xml.ws".equals(pkg)
+                    || "jakarta.jws".equals(pkg)) {
 
                     LOG.log(Level.WARNING, "JAXWS_ANNOTATION_FOUND", serviceClass.getName());
                     return;
@@ -2434,8 +2433,8 @@ public class ReflectionServiceFactoryBean extends org.apache.cxf.service.factory
             if (anns != null) {
                 for (Annotation ann : anns) {
                     String pkg = ann.annotationType().getPackage().getName();
-                    if ("javax.xml.ws".equals(pkg)
-                        || "javax.jws".equals(pkg)) {
+                    if ("jakarta.xml.ws".equals(pkg)
+                        || "jakarta.jws".equals(pkg)) {
 
                         LOG.log(Level.WARNING, "JAXWS_ANNOTATION_FOUND", serviceClass.getName());
                         return;
