@@ -31,7 +31,7 @@ import javax.wsdl.extensions.ExtensionRegistry;
 import javax.wsdl.xml.WSDLWriter;
 
 public abstract class SchemaFactory {
-    private static final String PROPERTY_NAME = "javax.wsdl.factory.SchemaFactory";
+    private static final String PROPERTY_NAME = "jakarta.wsdl.factory.SchemaFactory";
     private static final String PROPERTY_FILE_NAME = "wsdl.properties";
     private static final String DEFAULT_FACTORY_IMPL_NAME =
         "org.apache.cxf.tools.corba.processors.wsdl.SchemaFactoryImpl";
@@ -45,7 +45,7 @@ public abstract class SchemaFactory {
      * class which implements WSDLFactory. The steps (in order)
      * are:
      *<pre>
-     *  Check the javax.wsdl.factory.WSDLFactory system property.
+     *  Check the jakarta.wsdl.factory.WSDLFactory system property.
      *  Check the lib/wsdl.properties file in the JRE directory. The key
      * will have the same name as the above system property.
      *  Use the default value.
@@ -78,7 +78,7 @@ public abstract class SchemaFactory {
                 ClassLoader loader = Thread.currentThread().getContextClassLoader();
                 Class<?> cl = loader.loadClass(factoryImplName);
 
-                return (SchemaFactory)cl.newInstance();
+                return (SchemaFactory)cl.getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                 /*
                  Catches:
@@ -108,11 +108,9 @@ public abstract class SchemaFactory {
     public abstract ExtensionRegistry newPopulatedExtensionRegistry();
 
     private static String findFactoryImplName() {
-        String factoryImplName = null;
-
         // First, check the system property.
         try {
-            factoryImplName = System.getProperty(PROPERTY_NAME);
+            String factoryImplName = System.getProperty(PROPERTY_NAME);
 
             if (factoryImplName != null) {
                 return factoryImplName;
@@ -131,7 +129,7 @@ public abstract class SchemaFactory {
                     properties.load(is);
                 }
 
-                factoryImplName = properties.getProperty(PROPERTY_NAME);
+                String factoryImplName = properties.getProperty(PROPERTY_NAME);
 
                 if (factoryImplName != null) {
                     return factoryImplName;
